--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>Index</h1>
+    <a href="index.html" target="_blank">-></a><br />
+    <img src="img/index.webp" alt="Index"title="Index"width="150"height="150">
+    <h1>List</h1>
+    <a href="list.html" target="_blank">List</a><br>
+    <figure>
+    <img src="img/list.jpg" alt="List"title="List"width="150"height="150"></figure>
+    <figcaption>list</figcaption><br>
+    <h1>Link</h1>
+    <a href="link.html" target="_blank">Link</a>
  <h1>number 1</h1> 
  <h2>number 2</h2> 
  <h3>number 3</h3>
