--- a/link.html
+++ b/link.html
@@ -10,11 +10,14 @@
     <a href="index.html">Index</a><br />
     <img src="img/index.webp" alt="Index"title="Index"width="150"height="150">
     <h1>List</h1>
-    <a href="list.html">List</a><br>
+    <a href="list.html#Definition List">List</a><br>
     <figure>
     <img src="img/list.jpg" alt="List"title="List"width="150"height="150"></figure>
     <figcaption>list</figcaption><br>
     <h1>Link</h1>
     <a href="link.html">Link</a>
+    <div>
+    <audio src="mp3/Believer(PagalNew.Com.Se).mp3" controls>Motivation Song</audio>
+    </div>
 </body>
 </html>
