--- a/list.html
+++ b/list.html
@@ -6,13 +6,26 @@
     <title>List</title>
 </head>
 <body>
-    <h1>List of list</h1>
+    <h1>Index</h1>
+    <a href="index.html" target="_blank">-></a><br />
+    <img src="img/index.webp" alt="Index"title="Index"width="150"height="150">
+    <h1>List</h1>
+    <a href="list.html" target="_blank">List</a><br>
+    <figure>
+    <img src="img/list.jpg" alt="List"title="List"width="150"height="150"></figure>
+    <figcaption>list</figcaption><br>
+    <h1>Link</h1>
+    <a href="link.html" target="_blank">Link</a>
+    <!-- block elements h,p,div,li,ul-->
+     <!-- inline elements a,img,span  -->
+    <h1 class="bluetext">List of list</h1>
     <h2>Unordered list</h2>
     <ul>
         <li>Unordered List</li>
         <li>Ordered list</li>
         <li>Definition List</li>
     </ul>
+    <iframe src="index.html" frameborder="5"></iframe>
     <h2>Ordered list</h2>
     <ol type="I">
         <li>Unordered List</li>
@@ -24,14 +37,19 @@
             <li>checking nested List</li>
         </ul>
     </ol>
-    <h2>Definition List</h2>
+    <p>&copy</p>
+<div id="define">
+        <h2 id="Definition List">Definition List</h2>
     <dl >
         <dt>Unordered list</dt>
         <dd>An unordered list is an list type to list the things you want in unordered way</dd>
         <dt>Ordered list</dt>
-        <dd>An Ordered List is an list type to list the things in an ordered way</dd>
+        <dd><span>An Ordered List is an list type to list the things in an ordered way</span></dd>
         <dl>Definition List</dl>
         <dd>An Definition List is an list which is used to list and define the things you listed</dd>
     </dl>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3886.2630098690383!2d80.21389849999998!3d13.082510700000011!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a526420e47e68e5%3A0xe089434d338acf6a!2sApple%20showroom%20in%20chennai!5e0!3m2!1sen!2sin!4v1737537642404!5m2!1sen!2sin" width="450" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+</div>
+    
 </body>
 </html>
